--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -29,4 +29,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-database:16.0.3'
+
+
 }
+//
+apply plugin: 'com.google.gms.google-services'
